# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.205 2008/05/15 15:31:11 ulm Exp $

  28 Mar 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.2.9999.ebuild,
  emacs-cvs-23.0.50_pre20080201.ebuild, emacs-cvs-23.0.9999.ebuild:
  Add keepdir for site-lisp directory. Activate test for version number again.

  26 Mar 2008; Ulrich Mueller <ulm@gentoo.org> -emacs-cvs-22.1.91.ebuild,
  -emacs-cvs-22.1.92.ebuild, emacs-cvs-22.2.9999.ebuild:
  Remove pretest versions. Remove blocker on emacs-22.2.

*emacs-cvs-23.0.9999 (26 Mar 2008)
*emacs-cvs-22.2.9999 (26 Mar 2008)

  26 Mar 2008; Ulrich Mueller <ulm@gentoo.org> -emacs-cvs-22.1.9999.ebuild,
  +emacs-cvs-22.2.9999.ebuild, -emacs-cvs-23.0.60-r2.ebuild,
  +emacs-cvs-23.0.9999.ebuild:
  Rename, to reflect upstream change of version number and to emphasise that
  these are live CVS ebuilds.

*emacs-cvs-22.1.92 (07 Mar 2008)

  07 Mar 2008; Ulrich Mueller <ulm@gentoo.org> -emacs-cvs-22.1.90.ebuild,
  +emacs-cvs-22.1.92.ebuild:
  New pretest. Remove old.

  28 Feb 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-23.0.60-r2.ebuild:
  Drop libotf USE flag; Upstream says that libotf without m17n-flt is useless.

  21 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-23.0.60-r2.ebuild:
  README.unicode does not need to be installed anymore, see bug 210950,
  reported by Tassilo Horn <tassilo@member.fsf.org>

  20 Feb 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-23.0.60-r2.ebuild:
  Add support for usage of m17n-lib for text shaping.

*emacs-cvs-22.1.91 (20 Feb 2008)

  20 Feb 2008; Ulrich Mueller <ulm@gentoo.org> +emacs-cvs-22.1.91.ebuild:
  New Emacs 22.2 pretest version.

  11 Feb 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.1.90.ebuild,
  emacs-cvs-22.1.9999.ebuild, emacs-cvs-23.0.50_pre20080201.ebuild,
  emacs-cvs-23.0.60-r2.ebuild:
  Don't unset LDFLAGS, bug 77430.
