@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/emacs-cvs
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.205 2008/05/15 15:31:11 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.206 2008/06/01 11:33:58 ulm Exp $
+
+  01 Jun 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.2.9999.ebuild,
+  emacs-cvs-23.0.50_pre20080201.ebuild, emacs-cvs-23.0.9999.ebuild:
+  Cleanup after bootstrapping, to prevent dumping emacs again in src_install.
+  Depend on x11-libs/openmotif explicitely for USE=motif.
 
   28 Mar 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.2.9999.ebuild,
   emacs-cvs-23.0.50_pre20080201.ebuild, emacs-cvs-23.0.9999.ebuild:
